Remove gift from page on click

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>IdeaBox</title>
+  <title>GiftBox</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <section class="form-container">
-    <h1>Genius Journal</h1>
+    <h1>GiftBox</h1>
     <form>
-      <input class="title-input" type="text" name="title" placeholder="Title">
-      <input class="description-input" type="text" name="description" placeholder="Description">
-      <button class="submit-btn">Add Idea</button>
+      <input class="title-input" type="text" name="title" placeholder="Gift">
+      <input class="recipient" type="text" name="recipient" placeholder="Who is this gift for?">
+      <input class="notes-input" type="text" name="notes" placeholder="Notes">
+      <button class="submit-btn">Add Gift</button>
     </form>
   </section>
   <section class="card-container">
