Add price input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <h1>GiftBox</h1>
     <form>
       <input class="title-input" type="text" name="title" placeholder="Gift">
-      <input class="recipient" type="text" name="recipient" placeholder="Who is this gift for?">
+      <input class="recipient-input" type="text" name="recipient" placeholder="Who is this gift for?">
+      <input class="price-input" type="text" name="price" placeholder="Price">
       <input class="notes-input" type="text" name="notes" placeholder="Notes">
       <button class="submit-btn">Add Gift</button>
     </form>
