--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>GiftBox</title>
+  <title>Gift Box</title>
+  <link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas|Patrick+Hand" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <section class="form-container">
-    <h1>GiftBox</h1>
+    <h1><span>G</span>ift <span>B</span>ox</h1>
     <form>
       <input class="title-input" type="text" name="title" placeholder="Gift">
       <input class="recipient-input" type="text" name="recipient" placeholder="Who is this gift for?">
@@ -16,20 +17,7 @@
     </form>
   </section>
   <section class="card-container">
-<!--     <article>
-      <h3>Title of the Card</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. </p>
-      <button class="remove-btn">Remove</button>
-    </article>
-    <article>
-      <h3>Title of the Card</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. </p>
-      <button class="remove-btn">Remove</button>
-    </article> -->
   </section>
-
 </body>
 <script type="text/javascript" src="script.js"></script>
 </html>
